<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.pages.DetailUserActivity"
    android:fitsSystemWindows="true"
    android:background=""
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <Toolbar
            android:id="@+id/toolbar2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:selectableItemBackground"
            android:padding="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <ImageButton
                    android:id="@+id/btnBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?android:selectableItemBackground"
                    android:contentDescription="Button Back"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="1.0"
                    app:srcCompat="@drawable/ic_baseline_arrow_back_ios_24" />

                <ImageButton
                    android:id="@+id/btnShared"
                    android:contentDescription="Button Share"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:background="?android:selectableItemBackground"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_baseline_share_24" />

                <TextView
                    android:id="@+id/tvDetailUsername"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:fontFamily="@font/oswald_bold"
                    tools:text="@string/usesrname"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="@+id/btnShared"
                    app:layout_constraintStart_toEndOf="@+id/btnBack"
                    app:layout_constraintTop_toTopOf="@+id/btnShared" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </Toolbar>


        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/toolbar2"
            tools:layout_editor_absoluteX="16dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/ivUserPhoto"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_gravity="center"
                tools:src="@tools:sample/avatars" />

            <TextView
                android:id="@+id/tvDetailName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/oswald"
                android:gravity="center"
                android:textSize="24sp"
                tools:text="@string/nama_lengkap" />

            <TextView
                android:id="@+id/tvDetailCompany"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/oswald_light"
                android:gravity="center"
                android:textSize="16dp"
                tools:text="@string/google_inc" />

            <TextView
                android:id="@+id/tvDetailLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/oswald_light"
                android:gravity="center"
                android:textSize="16sp"
                tools:text="@string/jakarta_indonesia" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="24dp"
                android:elevation="1dp"
                app:cardCornerRadius="14dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/grey">


                    <TextView
                        android:id="@+id/tvDetailRepo"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/oswald"
                        android:gravity="center"
                        android:textSize="14sp"
                        app:layout_constraintEnd_toStartOf="@+id/tvDetailFollowers"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/tvDetailFollowing"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/tvDetailFollowers"
                        tools:ignore="MissingConstraints"
                        tools:text="@string/total" />

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/oswald"
                        android:gravity="center"
                        android:text="@string/repository"
                        android:textSize="14sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/textView5"
                        app:layout_constraintTop_toTopOf="@+id/textView5" />

                    <TextView
                        android:id="@+id/tvDetailFollowers"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/oswald"
                        android:gravity="center"
                        android:text="@string/total"

                        android:textSize="14sp"
                        app:layout_constraintEnd_toStartOf="@+id/tvDetailFollowing"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/tvDetailRepo"
                        app:layout_constraintTop_toTopOf="@+id/tvDetailFollowing"
                        tools:ignore="MissingConstraints" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/oswald"
                        android:gravity="center"
                        android:text="@string/followers"
                        android:textSize="14sp"
                        app:layout_constraintEnd_toStartOf="@+id/textView"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/textView6"
                        app:layout_constraintTop_toTopOf="@+id/textView6"
                        tools:ignore="MissingConstraints" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:fontFamily="@font/oswald"
                        android:gravity="center"
                        android:text="Following"
                        android:textSize="14sp"
                        app:layout_constraintEnd_toStartOf="@+id/textView5"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/textView"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tvDetailRepo" />

                    <TextView
                        android:id="@+id/tvDetailFollowing"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:fontFamily="@font/oswald"
                        android:gravity="center"
                        android:text="17890"
                        android:textSize="14sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/tvDetailFollowers"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="MissingConstraints" />


                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/green"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2">
            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/green"
                app:tabTextColor="@color/white"/>
            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/viewPager"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>